M4E-FrontEndDev-CootaucoJoseMalhabour/main copy.css
body{
    font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;
}

table {
    border-collapse: collapse;
}

td{
    padding: 10px;
    border: 1px gray solid;
}


.container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;

}

.nav {
    width: 20%
}
form {
    padding: 5px;
}
form input, label {
    padding: 5px;
    margin: 5px;
}
.mid {
    width: 75%;
    padding: 5px; 
    margin: 10px
}

.Fields_div {
    align-self : flex-start;
    border: 1px solid black;
    padding: 20px;
    margin: 20px;
    justify-content: left;

}

.footer {
    width: 100%;
    text-align:center;

}

.header{
    width: 100%;
}

.carousel-item img { 
    display: block; 
    width: 100%; 
    height: 400px; 
    object-fit: cover; 
}

/* carousel button stuff*/ 
.carousel-control-prev, .carousel-control-next {
    width: 5%;
    background-color: rgba(0, 0, 0, 0.3); 
    border-radius: 0%; 
}

.carousel-control-prev-icon, .carousel-control-next-icon { 
    background-size: 100% 100%; 
    filter: invert(1);
}

.carousel-control-prev:hover, .carousel-control-next:hover{ 
    background-color: rgba(0,0,0,0.6);
}

